--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "indent":[1,2]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
